	(w3m-form-input-map-buffer-lines): New user option.
	(w3m-form-input-map-mode-hook): Ditto.
	(w3m-form-input-map-set-hook): Ditto.
	(w3m-form-input-map-keymap): New keymap.
	(w3m-form-input-map-buffer): New buffer local variable.
	(w3m-form-input-map-wincfg): Ditto.
	(w3m-form-input-map-set): New function.
	(w3m-form-input-map-mode): Ditto.
	(w3m-form-input-map): Ditto.

2001-07-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-submit): New defmacro.
	(w3m-mouse-view-this-url): Handle the action of form tag.
	(w3m-submit-form): New function, submit the form.
	(w3m-lynx-like-map): Add w3m-submit-form().
	(w3m-info-like-map): Ditto.
	(w3m-mode): Modify doc-string.

	* w3m-form.el (w3m-fontify-forms): Add 'w3m-submit property on
	all tags except the "reset".

2001-07-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-w3m-retrieve): Added argument `post-data'.
	(w3m-w3m-retrieve): Add -post and -post_ct to `w3m-command-arguments'
	when `post-data' is specified.
	(w3m-retrieve): Added argument `post-data'.
	(w3m-exec): Ditto.
	(w3m-goto-url): renamed `post-body' to `post-data'.
	Don't bind w3m-command-arguments here.

2001-07-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-w3m-dump-source, w3m-w3m-dump-head-source,
	w3m-local-dirlist-cgi): Say where the url is being connected to.

	* w3mhack.el (w3mhack-compile): Changed message convention.
	* w3m.el (w3m-view-source, w3m-rendering-region,
	w3m-w3m-dump-source, w3m-w3m-dump-head-source, w3m-w3m-get-header,
	w3m-local-dirlist-cgi, w3m-fontify): Ditto.
	* w3m-e21.el (w3m-setup-header-line): Ditto.
	* w3m-dtree.el (w3m-about-dtree): Ditto.
	* w3m-bookmark.el (w3m-bookmark-add-current-url,
	w3m-bookmark-add-this-url, w3m-bookmark-add-this-url): Ditto.
	* mime-w3m.el (mime-w3m-mouse-view-this-url): Ditto.

	* w3m.el (w3m-gohome, w3m-convert-ftp-url-for-emacsen,
	w3m-goto-mailto-url, w3m-edit-current-url, w3m-external-view,
	w3m-local-dirlist-cgi, w3m-toggle-inline-images,